--- a/deepcnn.ipynb
+++ b/deepcnn.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Maleyka-gh/Facial_Emotion_Recognition/blob/main/deepcnn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -1259,15 +1249,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "JUOY8icHK7bS"
-      },
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": 29,
       "metadata": {
         "id": "VJnpMRHAok0x"
@@ -1318,7 +1299,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Evaluation On the Best Loaded Model"
+        "### Evaluation On the Best Model"
       ],
       "metadata": {
         "id": "WH5Kkcx2yNnf"
@@ -1340,10 +1321,10 @@
       "execution_count": 32,
       "metadata": {
         "id": "eFx5KKZ3rm3j",
-        "outputId": "e4f9fdaf-3e38-49e5-87e9-f7dac51fcdd5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e4f9fdaf-3e38-49e5-87e9-f7dac51fcdd5"
       },
       "outputs": [
         {
@@ -1432,10 +1413,10 @@
       ],
       "metadata": {
         "id": "jm6EHtoKZTDM",
-        "outputId": "30122545-9fc1-4017-f278-fb28fff737e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "30122545-9fc1-4017-f278-fb28fff737e9"
       },
       "execution_count": 33,
       "outputs": [
@@ -1466,10 +1447,10 @@
       ],
       "metadata": {
         "id": "zS0E09WCa0MZ",
-        "outputId": "a9dfb180-0f5a-4b5d-c9f9-4cac03005492",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a9dfb180-0f5a-4b5d-c9f9-4cac03005492"
       },
       "execution_count": 35,
       "outputs": [
@@ -1492,10 +1473,10 @@
       ],
       "metadata": {
         "id": "zwW5057hZYbp",
-        "outputId": "071c7838-2c5b-4733-da34-58443ee53f66",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "071c7838-2c5b-4733-da34-58443ee53f66"
       },
       "execution_count": 36,
       "outputs": [
@@ -1556,11 +1537,11 @@
       ],
       "metadata": {
         "id": "t7S9UVqubYwn",
-        "outputId": "0a4c5586-d3e6-432b-edb0-dd13b35d94bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 190
-        }
+        },
+        "outputId": "0a4c5586-d3e6-432b-edb0-dd13b35d94bd"
       },
       "execution_count": 37,
       "outputs": [
@@ -1591,11 +1572,11 @@
       "execution_count": 42,
       "metadata": {
         "id": "C2hr8wOyD4vc",
-        "outputId": "22dc97e0-9980-48e4-eafc-3b9a9dd08a5f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 399
-        }
+        },
+        "outputId": "22dc97e0-9980-48e4-eafc-3b9a9dd08a5f"
       },
       "outputs": [
         {
@@ -1632,11 +1613,11 @@
       "execution_count": 43,
       "metadata": {
         "id": "AzW4cG66EDAR",
-        "outputId": "f3351244-dd03-4393-cfac-592ab0dbc4ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 912
-        }
+        },
+        "outputId": "f3351244-dd03-4393-cfac-592ab0dbc4ce"
       },
       "outputs": [
         {
@@ -1690,7 +1671,7 @@
         "id": "851jH3CuIVk_"
       },
       "source": [
-        "### The confusion matrix represents how well the model is performing on emotion with higher number of samples, while its performace is slightly worse on emotions with lower number of samples. On the other hand,  some images in emotion Disgust and Angry, Fear and Neutral can easily be misclassified even  by human eye. Facial expression depends on individual as well.\n"
+        "### The confusion matrix represents how well the model is performing on emotion with higher number of samples, while its performace is slightly worse on emotions with lower number of samples. On the other hand, it's challenging to accurately categorize certain emotions like Disgust vs. Angry and Fear vs. Neutral, a difficulty that even human observers encounter. This highlights the inherent variability in facial expressions.\n"
       ]
     },
     {
@@ -1707,11 +1688,11 @@
       "execution_count": 44,
       "metadata": {
         "id": "wn3xsB2ViA9z",
-        "outputId": "78fcf888-0a6c-4dd4-92a6-59fd0df78371",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 912
-        }
+        },
+        "outputId": "78fcf888-0a6c-4dd4-92a6-59fd0df78371"
       },
       "outputs": [
         {
@@ -1764,11 +1745,11 @@
       "execution_count": 45,
       "metadata": {
         "id": "04J_KEvyy9ns",
-        "outputId": "ca85a631-e148-45e5-e5cc-b7b4a63d327d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 685
-        }
+        },
+        "outputId": "ca85a631-e148-45e5-e5cc-b7b4a63d327d"
       },
       "outputs": [
         {
@@ -1820,10 +1801,10 @@
       "execution_count": 46,
       "metadata": {
         "id": "E8LYfGSLzA_G",
-        "outputId": "9f7374f5-0487-4ff3-b485-a2869f34eb58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9f7374f5-0487-4ff3-b485-a2869f34eb58"
       },
       "outputs": [
         {
@@ -1855,10 +1836,10 @@
       ],
       "metadata": {
         "id": "FCC9B6a_rA_o",
-        "outputId": "f5d9f399-3599-47f0-f23b-78708857d8c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f5d9f399-3599-47f0-f23b-78708857d8c6"
       },
       "execution_count": 47,
       "outputs": [
@@ -1881,10 +1862,10 @@
       ],
       "metadata": {
         "id": "RaBmD7DDuGll",
-        "outputId": "c95e2c61-b46c-43c1-8188-0bf1957fae7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c95e2c61-b46c-43c1-8188-0bf1957fae7e"
       },
       "execution_count": 48,
       "outputs": [
@@ -1907,10 +1888,10 @@
       ],
       "metadata": {
         "id": "z2Pvi0AquH1Y",
-        "outputId": "cfe0f3d4-9241-427a-cd3c-fff4a66199ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cfe0f3d4-9241-427a-cd3c-fff4a66199ac"
       },
       "execution_count": 49,
       "outputs": [
@@ -1933,10 +1914,10 @@
       ],
       "metadata": {
         "id": "Fc9rZE91uJyh",
-        "outputId": "c6c3c156-b7bd-4bed-91a3-cf2a2870a6fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c6c3c156-b7bd-4bed-91a3-cf2a2870a6fd"
       },
       "execution_count": 50,
       "outputs": [
@@ -1987,11 +1968,11 @@
       "execution_count": 52,
       "metadata": {
         "id": "MI72k9u-HQJv",
-        "outputId": "70c1742b-e604-4d29-f218-28404511b94a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "outputId": "70c1742b-e604-4d29-f218-28404511b94a"
       },
       "outputs": [
         {
@@ -2089,11 +2070,11 @@
       "execution_count": 53,
       "metadata": {
         "id": "-xziXQx6cheY",
-        "outputId": "94745650-df35-447b-ad74-1bd17c953229",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "outputId": "94745650-df35-447b-ad74-1bd17c953229"
       },
       "outputs": [
         {
@@ -2175,11 +2156,11 @@
       "execution_count": 54,
       "metadata": {
         "id": "7zR7jVAzqrsU",
-        "outputId": "8000cbac-efcc-45d6-e774-d3b4acfc4486",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 606
-        }
+        },
+        "outputId": "8000cbac-efcc-45d6-e774-d3b4acfc4486"
       },
       "outputs": [
         {
@@ -2258,8 +2239,7 @@
     "accelerator": "GPU",
     "colab": {
       "machine_shape": "hm",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
